Archive2/99/383e7f8bfa77ba/output
main.cpp: In function 'int main()':
main.cpp:23:19: error: no matching function for call to 'detail::Graph<1ul>::addNode(detail::Graph<0ul>::Node&)'
     b.addNode(node); // type error
                   ^
main.cpp:23:19: note: candidate is:
main.cpp:11:14: note: void detail::Graph<N>::addNode(detail::Graph<N>::Node) [with long unsigned int N = 1ul]
         void addNode(Node) { }
              ^
main.cpp:11:14: note:   no known conversion for argument 1 from 'detail::Graph<0ul>::Node' to 'detail::Graph<1ul>::Node'
